--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,3 +5,17 @@ body {
 h1 {
   font-family: poppins;
 }
+
+.header {
+  display: flex;
+  justify-content: center;
+}
+
+.img-container {
+  display: flex;
+  justify-content: center;
+}
+
+.masterball {
+  height: 100px;
+}
