create-react-app was used for this project long ago, and I can't keep working on this app without API issues not caused by me, and slowness. I tried to convert to vite but I couldn't get it to work. I would have added a functionality to store pokemon if create-react-app worked.

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,24 @@
 body {
   background-color: rgb(255, 233, 109);
 }
+
+.display-button {
+  font-size: 1.2rem;
+  background-color: rgb(255, 165, 47);
+  border: none;
+  border-radius: 1.2rem;
+  padding: 1rem;
+  transition-duration: 200ms;
+}
+
+.display-button:hover {
+  cursor: pointer;
+  opacity: 0.8;
+}
+
+.button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
