--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -2,6 +2,39 @@
   background-color: purple;
   color: white;
   width: 300px;
+  height: 350px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  padding: 1.5rem;
+  gap: 2rem;
+}
+
+.name {
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.5rem;
+}
+
+.card-color img {
+  font-size: 1.6rem;
+}
+
+.img-container {
+  display: flex;
+}
+
+.name-and-image-container {
+  display: flex;
+  flex-direction: column;
+  gap: 2.3rem;
+}
+
+.move-and-baseXP-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.move-info {
+  margin-left: auto;
+  margin-right: auto;
 }
